# sean

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: generate.py  main.py  train.py
src/sean/: batchnorm.py  config.py  dataset.py  loss.py  model.py  network.py  predictor.py  trainer.py
