[tool.poetry]
name = "sean"
version = "0.1.0"
description = ""
authors = ["y-kamiya <y.kamiya0@gmail.com>"]
readme = "README.md"
packages = [{include = "sean", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
