[tool.poetry]
name = "sean"
version = "0.1.0"
description = ""
authors = ["y-kamiya <y.kamiya0@gmail.com>"]
readme = "README.md"
packages = [{include = "sean", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = [
    { version = "<2.0+cpu", markers = "sys_platform == 'darwin'" },
    { version = "<2.0+cu113", markers = "sys_platform == 'linux'" },
]
torchvision = [
    { version = "<1.0+cpu", markers = "sys_platform == 'darwin'" },
    { version = "<1.0+cu113", markers = "sys_platform == 'linux'" },
]
argparse-dataclass = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true
